# modular-registry-framework-template

./: .gitignore  README.md  pyproject.toml
docs/: app-template-types.md  architecture.md  building-a-module.md  built-in-modules.md  cli.md  debugging-and-logging.md  development-workflow.md  events-and-hooks.md  example-cross-module-flow.md  module-lifecycle.md  module-roadmap.md  service-patterns.md  traceability-and-flow-graph.md
modular_registry_framework/: __init__.py  cli.py  main.py  scaffold.py
modular_registry_framework/core/: __init__.py  context.py  logging_config.py  registry.py  settings.py
modular_registry_framework/desktop/: __init__.py  shell.py
modular_registry_framework/modules/: __init__.py
modular_registry_framework/modules/api_clients/: help.py  models.py  module.py  screens.py  service.py
modular_registry_framework/modules/app_profiles/: __init__.py  help.py  module.py  screens.py  service.py
modular_registry_framework/modules/artifact_browser/: help.py  module.py  screens.py  service.py
modular_registry_framework/modules/artifact_library/: help.py  models.py  module.py  screens.py  service.py
modular_registry_framework/modules/audit_log/: help.py  models.py  module.py  screens.py  service.py
modular_registry_framework/modules/command_palette/: help.py  module.py  screens.py  service.py
modular_registry_framework/modules/help/: help.py  (+3 more)
modular_registry_framework/scaffolding/: __init__.py
tests/: test_cli_and_utilities.py  test_example_module.py  test_registry.py  test_scaffold.py  test_settings.py  test_universal_modules.py
(+133 files in other folders)
