[project]
name = "modular-registry-framework"
version = "0.1.0"
description = "Reusable modular app template built around a small registry core."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mrf-app = "modular_registry_framework.main:main"
mrf-scaffold = "modular_registry_framework.scaffold:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
